5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1832_1651.log
== TEST (2019-06-13 18:20:33) 
-- CODE:
from nampy *

-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:27) 
-- CODE:
from nampy *
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")

-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:57) 
-- CODE:
from nampy *
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
    split(",")
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:30:43) 
-- CODE:
from nampy *
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:50) 
-- CODE:
from nampy *
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:28) 
-- CODE:
from nampy import *
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 8
    while(size,MC+C+CM+EM+E+ME)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:19) 
-- CODE:
from nampy import *
array
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 9
    while(size,MC+C+CM+EM+E+ME)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:12) 
-- CODE:
from nampy import *
m=array(eval(input("   :")))
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 9
    while(size,MC+C+CM+EM+E+ME)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:14) 
-- CODE:
from nampy import *
m=array(eval(input("   :")))
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print (soma/6)
-- ERROR:
File "XXXX", line 9
    while(size,MC+C+CM+EM+E+ME)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:47) 
-- CODE:
from nampy import *
m=array(eval(input("   :")))
for 
MC=("muito clara :")
C=("clara :")
CM=("clara media :")
EM=("escura media :")
E=("escura :")
ME=("muito escura :")
   while(size,MC+C+CM+EM+E+ME)
	print ()
-- ERROR:
File "XXXX", line 3
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
